* determine optical disk sessions
* detect floppy
* detect bus type
* determine USB serial number
* use pre windows XP io control codes as fallback ?
* add support for reading from floppy \\.\A: for builder5 compilation

Beta release
* remove deprecated functions in libsmdev_legacy.[ch]

Deployment
* add msvscpp files
* add borlandc files
* add macosx files

Test:
* add autoconf/make test suite

20110306
* updated libuna
* msvscpp added VSDebug option

20110303
* update for Cygwin WINAPI support
* updated libcstring

20110117
* updated libuna
* fixed invalid information value issue
* WINAPI added fallback media size detection for floppy drive
* fix for return value of FormatMessage

20110114
* updated common, libuna

20110110
* updated libcstring, libuna

20110108
* updated configure.ac
* updatec common, libcstring, libuna

20110106
* worked on UTF-8 functions

20110104
* updated libcstring, libuna
* 2011 update

20101219
* updated configure, added gettext support
* updated list type, offset list, sector list
* code clean up

20101214
* corrected 'errror'

20101207
* updated common, list type, offset list, sector list, liberror, libnotify,
  libuna
* code clean up

20101119
* updated configure.ac, libcstring, liberror
* fixed bug regarding session values

20101115
* updated offset list
* added libsmdev.rc

20101113
* textual changes
* updated configure.ac
* updated include/error.h, include/types.h
* updated liberror

20101014
* updated common

20101013
* worked on improving device info
* renamed Win95/98 safe WINAPI replacement functions
  to prevent conflict with libbfio

20101012
* worked on improving device info

20101008
* worked on improving device info
* updated offset list

20101007
* updated offset list
* updated liberror, libnotify
* worked on WINAPI error skip
* worked on detailed error reporting
* fixed missing HDIO_GET_IDENTITY in libsmdev_metadata.c

20100805
* invalid inclusion in libsmdev_handle.h
* fixed includion loop
* updated libcstring, libuna