@@ -150,6 +150,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\..\libcstring\libcstring_locale.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libcstring\libcstring_system_string.c"
 				>
 			</File>
@@ -173,6 +177,10 @@
 			</File>
 			<File
 				RelativePath="..\..\libcstring\libcstring_definitions.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libcstring\libcstring_locale.h"
 				>
 			</File>
 			<File
